# batch_gemm_test

./: .gitignore  CMakeLists.txt  b20000i1  b2000i50  batch_matmul_benchmark.cpp  benchmark_runner.hpp  cpu_benchmark.hpp  gpu_benchmark.hpp  main.cpp  run_batchmark.sh  utils.cpp  utils.hpp
